fix: let payment method buttons wrap on mobile

--- a/src/payment/_style.scss
+++ b/src/payment/_style.scss
@@ -62,6 +62,7 @@
     background-color: white;
     padding: map-get($spacers, 2);
     margin-right: map-get($spacers, 2);
+    margin-bottom: map-get($spacers, 2);
     border: solid $border-width $border-color;
     border-radius: $border-radius;
     cursor: pointer;
